# codex-tracker

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  REFACTOR.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: args.rs  config.rs  dirs.rs  main.rs
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/api/: mod.rs  types.rs
apps/desktop/src-tauri/src/api/handlers/: analytics.rs  homes.rs  ingest.rs  limits.rs  logs.rs  mod.rs  pricing.rs  settings.rs
apps/desktop/src-tauri/src/app/: mod.rs  startup.rs
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  Logo.tsx  api.ts  main.tsx  styles.css
apps/web/src/components/: Select.tsx
apps/web/src/data/: cache.ts  client.ts  codexApi.ts  dashboard.ts
apps/web/src/domain/: types.ts
apps/web/src/features/dashboard/: DashboardPage.tsx  useDashboardData.ts
apps/web/src/features/dashboard/components/: ActiveSessionsPanel.tsx  ChartsPanel.tsx  CostBreakdownPanel.tsx  DashboardHeader.tsx  EventsPanel.tsx  LimitsPanel.tsx  SessionDetailModal.tsx  SummaryCards.tsx
apps/web/src/features/settings/: SettingsPage.tsx  useSettingsState.ts
apps/web/src/features/settings/components/: DisplaySection.tsx  HomesSection.tsx  PricingSection.tsx  StorageSection.tsx
apps/web/src/features/shared/: Toast.tsx
apps/web/src/shared/: constants.ts  dates.ts  formatters.ts  keyboard.ts  math.ts  range.ts  storage.ts  validation.ts
apps/web/src/shared/__tests__/: dates.test.ts  formatters.test.ts
crates/app/: Cargo.toml  initial-pricing.json
crates/app/src/: error.rs  lib.rs  pricing.rs  startup.rs
crates/app/src/app/: mod.rs
crates/app/src/config/: mod.rs
crates/app/src/services/: analytics.rs  homes.rs  ingest.rs  limits.rs  mod.rs  pricing.rs  settings.rs
crates/app/src/util/: time.rs
crates/app/tests/: api_smoke.rs
crates/app_api/: Cargo.toml
crates/app_api/src/: context.rs  handlers.rs  lib.rs  paths.rs  requests.rs  responses.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_init.sql  0002_add_cached_input_pricing.sql  0003_add_codex_home.sql  0004_pricing_per_1m.sql  0005_add_session_id.sql  0006_add_reasoning_effort.sql  0007_add_usage_limits.sql  0008_add_message_events.sql  0009_add_cursor_state.sql
crates/db/src/: analytics.rs  breakdowns.rs  context.rs  error.rs  helpers.rs  homes.rs  ingest.rs  lib.rs  limits.rs  migrations.rs  pricing.rs  settings.rs  types.rs  usage_rows.rs
crates/db/tests/: breakdowns.rs  context.rs  db_queries.rs  homes.rs  limits.rs  migrations.rs  pricing_rules.rs
crates/db/tests/support/: mod.rs
crates/http_api/: Cargo.toml  build.rs
crates/http_api/src/: assets.rs  errors.rs  handlers.rs  lib.rs  middleware.rs  state.rs  tests.rs
crates/http_api/tests/: http_api.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs  parser.rs  paths.rs  pipeline.rs  totals.rs  types.rs
crates/ingest/tests/: ingest_pipeline.rs
crates/server/: Cargo.toml  initial-pricing.json
crates/server/src/: main.rs
docs/: plan-cli.md  release.md
docs/assets/: README.md
docs/homebrew/Casks/: codex-tracker.rb
scripts/: build-bundle.sh  release_local.sh  run-cli.sh  run-desktop.sh
