[package]
name = "tracker_app"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracker_core = { path = "../core" }
tracker_db = { path = "../db" }
ingest = { path = "../ingest" }

[dev-dependencies]
tempfile = "3"
