[package]
name = "tracker_db"
version.workspace = true
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1.0"
tracker_core = { path = "../core" }

[dev-dependencies]
tempfile = "3"
