[package]
name = "http_api"
version.workspace = true
edition = "2024"
build = "build.rs"

[dependencies]
app_api = { path = "../app_api" }
axum = "0.7.9"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracker_app = { path = "../app" }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
