[package]
name = "ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tracker_core = { path = "../core" }
tracker_db = { path = "../db" }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3"
