[package]
name = "tracker_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ingest = { path = "../ingest" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tracker_core = { path = "../core" }
tracker_db = { path = "../db" }
tower-http = { version = "0.5", features = ["fs"] }

[dev-dependencies]
http = "1.1"
http-body-util = "0.1"
tempfile = "3.12"
tower = { version = "0.5", features = ["util"] }
