[package]
name = "codex_tracker"
version = "0.1.0"
description = "Codex Tracker"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ingest = { path = "../../../crates/ingest" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-opener = "2.0.0"
tracker_app = { path = "../../../crates/app" }
tracker_core = { path = "../../../crates/core" }
tracker_db = { path = "../../../crates/db" }
